Fix alignment

--- a/static/styles/pages/_index.scss
+++ b/static/styles/pages/_index.scss
@@ -178,6 +178,13 @@
 
                 .container__table-of-contents {
                     list-style: none;
+                    width: 100%;
+                    padding-right: 1rem;
+                    padding-left: 1rem;
+                    flex-shrink: 1;
+                    display: block;
+                    flex: 0 0 25%;
+                    max-width: 25%;
 
                     .table-of-contents__item {
                         border-left: 0.25rem solid #e0e0e0;
@@ -189,7 +196,7 @@
                         padding-bottom: 0.75rem;
                         padding-left: 0.75rem;
                         font-size: 1rem;
-                        font-weight: 300;
+                        font-weight: 250;
                         line-height: 1.5em;
                         letter-spacing: 0;
                         transition: all 70ms cubic-bezier(0.2, 0, 0.38, 0.9);
@@ -223,7 +230,7 @@
                     .content__title {
                         padding-bottom: 2rem;
                         font-size: 1.75rem;
-                        font-weight: 400;
+                        font-weight: 300;
                         line-height: 129%;
                         letter-spacing: 0;
                     }
